<resources>
    <string name="app_name">Popular-Movies-Star</string>

    <!--Menu Movies-->
    <string name="popular_movie">Popular</string>
    <string name="upcoming_movie">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="release_date">Release Date :</string>
    <string name="overview">Overview</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
        Accusamus alias aspernatur corporis cumque dolore doloribus dolorum explicabo ipsum itaque
        molestiae mollitia nisi numquam porro provident reiciendis repudiandae tenetur,
        vel voluptatibus?
    </string>
    <string name="trailer">Trailer</string>

    <!--Error String-->
    <string name="no_connection_error">No Internet Connection</string>
    <string name="no_movies">No Movies</string>

</resources>
