<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single"
        android:id="@+id/option_movie">

        <item
            android:id="@+id/popular"
            android:title="@string/popular_movie"
            android:checked="true"
            android:orderInCategory="1"
            app:showAsAction="never"/>

        <item
            android:id="@+id/upcoming"
            android:title="@string/upcoming_movie"
            android:orderInCategory="2"
            app:showAsAction="never"/>

        <item
            android:id="@+id/now_playing"
            android:title="@string/now_playing"
            android:orderInCategory="3"
            app:showAsAction="never"/>

    </group>

</menu>